--- a/Assignment_1_CK.ipynb
+++ b/Assignment_1_CK.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#This notebook will mainly be used for the Coursera IBM Applied Data Science Capstone Project"
+    "## This notebook will mainly be used for the Coursera IBM Applied Data Science Capstone Project"
    ]
   },
   {
